# BookKeeper

./: .gitignore  main.py  pyproject.toml
configuration/: asgi.py  settings.py  urls.py  wsgi.py
ledger/: urls.py  views.py
ledger/templates/: ledgerhome.html
ledger/templates/ledger/: ledgerhome.html
ledger/templates/ledger/pages/: ledgerhome.html
ledger/templates/ledger/partials/: head.html  header.html  search.html
